@@ -128,6 +128,9 @@ private:
     //! Receive filename used as splash screen image
     bool receiveSplash();
 
+    //! Receive filename used as landscape splash screen image
+    bool receiveLandscapeSplash();
+
     //! Send process pid
     bool sendPid(pid_t pid);
 
@@ -154,6 +157,7 @@ private:
 
     string   m_fileName;
     string   m_splashFileName;
+    string   m_landscapeSplashFileName;
     uint32_t m_argc;
     const char **  m_argv;
     int      m_io[IO_DESCRIPTOR_COUNT];
